# what-the-duck

./: .bazelrc  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
src/: main.rs
